--- a/iTed2/Views/Shared/_Layout.cshtml
+++ b/iTed2/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="contentContainer">
-        <div id="xmas">
+        <div id="xmas" class="xmas">
             <canvas id="xmasCanvas"></canvas>
         </div>
         @RenderBody()
