--- a/iTed2/Content/xmas.css
+++ b/iTed2/Content/xmas.css
@@ -64,32 +64,6 @@ div.contentContainer footer {
     margin-top: 5px;
 }
 
-div.unit{
-    width:45px;
-    float: right; 
-    margin-right: 30px
-}
-
-div.unit > img.pic1{
-    position:relative;
-    width: 100%;
-    top:0;
-    left:0;
-    z-index:1;
-}
-div.unit > img.pic2{
-    position:relative;
-    width: 100%;
-    top:-43px;
-    left:0px;
-    z-index:0;
-    opacity:0;
-}
-
-div.unit > img.pic2.curr{
-    opacity:1;
-}
-
 div.link-text{
     color:#000;
     cursor:pointer;
@@ -229,15 +203,16 @@ div.link-text:hover{
 }
 
 /* Search Page*/
-.searchPageContainer {
+.search-container {
     position:absolute;
     top:0px;
     width:100%;
     height:100%;
+    overflow:auto;
 }
 
 /*Search Button CSS*/
-.searchBtnContainer {
+.searchBtn-container {
     position: relative;
     margin-top: 1%;
     margin-left: 23%;
@@ -291,13 +266,12 @@ div.link-text:hover{
 /********************/
 /*Search Result List CSS*/
 
-.articleContainer {
+.article-container {
     width: 45%;
     margin: 0 auto;
-    overflow:auto;
 }
 
-.articleContainer > article {
+.article-container > article {
     background: rgb(174, 174, 174);
     opacity: 0.7;
     padding: 15px;
@@ -325,9 +299,67 @@ article > .row-container {
     font-size:20px;
 }
 
-.articleContainer > article:hover {
+.article-container > article:hover {
     opacity:1;
     background:#C2EAFF;
 }
-
 /************************/
+/* Detail Page*/
+.deatail-container {
+    position:absolute;
+    top:0px;
+    width:100%;
+    height:100%;
+}
+
+.deatail-container > .title {
+    text-align: center;
+	color: #fff;
+    margin: 30px 0px;
+    font-size:30px;
+    font-weight:bold;
+}
+
+.deatail-container > .video {
+    width: 55%;
+    margin:0px auto;
+}
+
+.deatail-container > .description-container {
+    width: 55%;
+    margin: 0px auto;
+}
+
+.description-container > .description{
+    width:90%;
+    font-size:25px;
+    color: #fff;
+    margin-left: 10px;
+    float: left;
+}
+
+div.unit{
+    width:45px;
+    float: right; 
+    margin-right: 30px
+}
+
+div.unit > img.pic1{
+    position:relative;
+    width: 100%;
+    top:0;
+    left:0;
+    z-index:1;
+}
+div.unit > img.pic2{
+    position:relative;
+    width: 100%;
+    top:-43px;
+    left:0px;
+    z-index:0;
+    opacity:0;
+}
+
+div.unit > img.pic2.curr{
+    opacity:1;
+}
