--- a/iTed2/Views/Detail/Index.cshtml
+++ b/iTed2/Views/Detail/Index.cshtml
@@ -3,31 +3,29 @@
 @{
     ViewBag.Title = "上映影片 : " + ViewBag.title;
 }
-<div class="xmas">
-        @if (ViewBag.videoUrl != null)
-        {
-            <div class="title">
-                <h2>
-                    @ViewBag.title
-                </h2>
+<div class="deatail-container">
+    @if (ViewBag.videoUrl != null)
+    {
+        <div class="title">
+            @ViewBag.title
+        </div>
+        <div class="video">
+            <hr />
+            <iframe src=@ViewBag.videoUrl scrolling="no" seamless="seamless" id="iframe-src" style="width:100%; height:481px;"></iframe>
+            <hr />
+        </div>
+        <div class="description-container">
+            <div class="description">
+                @ViewBag.description
             </div>
-            <div class="xmas-video">
-                <hr />
-                <iframe src=@ViewBag.videoUrl scrolling="no" seamless="seamless" id="iframe-src" style="width:100%; height:481px;"></iframe>
-                <hr />
+            <div class="unit">
+                <img src="~/Image/star0.png" class="pic1">
+                <img src="~/Image/star2.png" class="pic2">
             </div>
-            @*<div class="description">
-                <div style="width: 60%; text-align: left; margin-left: 10px; float: left;">
-                    <p>@ViewBag.description</p>
-                </div>
-                <div class="unit">
-                    <img src="~/Image/star0.png" class="pic1">
-                    <img src="~/Image/star2.png" class="pic2">
-                </div>
-                <div style="clear:both;"></div>
-                <hr />
-            </div>*@
-            @*using (Ajax.BeginForm("_DescriptionList", "Detail", null, new AjaxOptions { UpdateTargetId = "descriptionLists", HttpMethod = "Post" }))
+            <div style="clear:both;"></div>
+            <hr />
+        </div>
+        @*using (Ajax.BeginForm("_DescriptionList", "Detail", null, new AjaxOptions { UpdateTargetId = "descriptionLists", HttpMethod = "Post" }))
             {
                 @Html.AntiForgeryToken()
                 <input type="hidden" name="Id" value='@ViewBag.videoId'>
@@ -49,10 +47,10 @@
             <div id="descriptionLists">
                 @Html.Action("_DescriptionList", "Detail", new { videoId = @ViewBag.videoId });
             </div>*@
-        }
-    <!-- Let it snow! -->
-    <canvas id="xmasCanvas"></canvas>
+    }
 </div>
+
+
 
 <script src="~/Scripts/VideoJS.js"></script>
 <script>
