--- a/iTed2/Content/xmas.css
+++ b/iTed2/Content/xmas.css
@@ -305,14 +305,14 @@ article > .row-container {
 }
 /************************/
 /* Detail Page*/
-.deatail-container {
+.detail-container {
     position:absolute;
     top:0px;
     width:100%;
     height:100%;
 }
 
-.deatail-container > .title {
+.detail-container > .title {
     text-align: center;
 	color: #fff;
     margin: 30px 0px;
@@ -320,12 +320,12 @@ article > .row-container {
     font-weight:bold;
 }
 
-.deatail-container > .video {
+.detail-container > .video {
     width: 55%;
     margin:0px auto;
 }
 
-.deatail-container > .description-container {
+.detail-container > .description-container {
     width: 55%;
     margin: 0px auto;
 }
@@ -338,20 +338,21 @@ article > .row-container {
     float: left;
 }
 
-div.unit{
+div.unit {
     width:45px;
+    height:45px;
     float: right; 
-    margin-right: 30px
+    margin-right: 10px
 }
 
-div.unit > img.pic1{
+div.unit > img.pic1 {
     position:relative;
     width: 100%;
     top:0;
     left:0;
     z-index:1;
 }
-div.unit > img.pic2{
+div.unit > img.pic2 {
     position:relative;
     width: 100%;
     top:-43px;
@@ -360,6 +361,58 @@ div.unit > img.pic2{
     opacity:0;
 }
 
-div.unit > img.pic2.curr{
+div.unit > img.pic2.curr {
     opacity:1;
+}
+
+.comment-container {
+    width: 55%;
+    margin: 0px auto;
+}
+
+.comment-container > .comment-textbox {
+    width: 100%;
+    max-width: 950px;
+    margin-left :5px;
+}
+
+.comment-container > .submit-btn {
+    float: right; 
+    margin-right: 5px;
+}
+
+.animate
+{
+	transition: all 0.1s;
+	-webkit-transition: all 0.1s;
+}
+
+.action-button
+{
+	position: relative;
+	padding: 10px 20px;
+	border-radius: 10px;
+	font-size: 25px;
+	color: #FFF;
+}
+
+.green
+{
+	background-color: #82BF56;
+	border-bottom: 5px solid #669644;
+	text-shadow: 0px -2px #669644;
+}
+
+.action-button:active
+{
+	transform: translate(0px,5px);
+    -webkit-transform: translate(0px,5px);
+	border-bottom: 1px solid;
+}
+
+
+.comment-list-container {
+    width: 55%;
+    margin:0px auto;
+    overflow:auto;
 }
