--- a/iTed2/Content/xmas.css
+++ b/iTed2/Content/xmas.css
@@ -448,3 +448,63 @@ comment-article-container::-webkit-scrollbar {
 }
 
 /**************/
+/*Favorite Pag*/
+.favorite-Container{
+    position:absolute;
+    top:0px;
+    width:100%;
+    height:100%;
+}
+
+.TreeView {
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.0);
+    width: 55%;
+    margin: 50px auto;
+}
+
+#menu1 ul {
+    margin-top: 5px;
+}
+#menu1 li {
+    display: block;
+}
+
+#menu1 li a {
+    color:#fff;
+}
+
+#menu1 li a:before {
+    content: "▼";
+}
+
+#menu1 li ul li a:before {
+    content: "●";
+}
+
+#menu1 .title-marginTop ul {
+    border-top: 5px solid #389639;
+    margin-top: 0px;
+    padding: 1em;
+    font-size: 20px;
+}
+li.title-marginTop {
+    margin-top: 15px;
+}
+
+a.treeView-title {
+    color: #fff;
+    font-weight: bold;
+    background: #389639;
+    padding: 6px 10px;
+    text-shadow: rgba(0,0,0,0.296875) 0 2px 3px;
+    font: 20px 蘋果儷中黑, 微軟正黑體, simhei, 'ms gothic';
+}
+
+#videoHref {
+    margin-left: 20px;
+}
+
+.textAlert {
+    text-align: center;
+}
+/**************/
