--- a/iTed2/Views/MyFavorite/Index.cshtml
+++ b/iTed2/Views/MyFavorite/Index.cshtml
@@ -3,12 +3,11 @@
 @{
     ViewBag.Title = "我的最愛";
 }
-
-<div class="all-mytedView">
+<div class="favorite-Container">
     <div class="TreeView">
         @if (Model.Count() != 0)
         {
-            <ul id="menu1" class="example_menu">
+            <ul id="menu1">
                 @foreach (var item in Model)
                 {
                     <li class="title-marginTop">
