fix the css about account page

--- a/iTed2/Content/xmas.css
+++ b/iTed2/Content/xmas.css
@@ -508,3 +508,11 @@ a.treeView-title {
     text-align: center;
 }
 /**************/
+
+.account-container {
+    position: absolute;
+    width: 40%;
+    top: 40px;
+    left: 25%;
+    color: #fff;
+}
